src/objects/pse__Forecast_Enhanced_Override__c.object
<CustomObject>
    <customHelpPage>pse__ForecastEnhancedOverrideHelp</customHelpPage>
    <description>Stores information on an override applied to a billing forecast summary category or billing forecast detail category.</description>
    <fields>
        <fullName>pse__Forecast_Enhanced_Calculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the billing forecast calculation this override applies to.</description>
        <inlineHelpText>A lookup to the billing forecast calculation this override applies to.</inlineHelpText>
        <label>Billing Forecast Calculation</label>
        <referenceTo>pse__Forecast_Enhanced_Calculation__c</referenceTo>
        <relationshipLabel>Billing Forecast Overrides</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Enhanced_Detail_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the billing forecast detail category this override applies to.</description>
        <inlineHelpText>A lookup to the billing forecast detail category this override applies to.</inlineHelpText>
        <label>Billing Forecast Detail Category</label>
        <referenceTo>pse__Forecast_Enhanced_Detail_Category__c</referenceTo>
        <relationshipLabel>Billing Forecast Overrides</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Enhanced_Summary_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the billing forecast summary category this override applies to.</description>
        <inlineHelpText>A lookup to the billing forecast summary category this override applies to.</inlineHelpText>
        <label>Billing Forecast Summary Category</label>
        <referenceTo>pse__Forecast_Enhanced_Summary_Category__c</referenceTo>
        <relationshipLabel>Billing Forecast Overrides</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the group this override applies to.</description>
        <inlineHelpText>A lookup to the group this override applies to.</inlineHelpText>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Billing Forecast Overrides</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether this override is the currently active override for the summary category or detail category it is applied to.</description>
        <inlineHelpText>Determines whether this override is the currently active override for the summary category or detail category it is applied to.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Notes__c</fullName>
        <description>Additional information to explain why the override was applied.</description>
        <inlineHelpText>Additional information to explain why the override was applied.</inlineHelpText>
        <label>Notes</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the opportunity this override applies to.</description>
        <inlineHelpText>A lookup to the opportunity this override applies to.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Billing Forecast Overrides</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Value__c</fullName>
        <description>The value entered for the billing forecast override.</description>
        <inlineHelpText>The value entered for the billing forecast override.</inlineHelpText>
        <label>Override Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the practice this override applies to.</description>
        <inlineHelpText>A lookup to the practice this override applies to.</inlineHelpText>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Billing Forecast Overrides</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the project this override applies to.</description>
        <inlineHelpText>A lookup to the project this override applies to.</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Billing Forecast Overrides</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the region this override applies to.</description>
        <inlineHelpText>A lookup to the region this override applies to.</inlineHelpText>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Billing Forecast Overrides</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Forecast Override</label>
    <nameField>
        <displayFormat>FOverride-{000000}</displayFormat>
        <label>Billing Forecast Override Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Forecast Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>